certmanager/ca/10-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: global
  namespace: istio-system
spec:
  selector:
    istio: ingress
    app: istio-ingress
  servers:
  - hosts:
    - ifconfig.inv.gov.ar
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ifconfig/ifconfig-cert
  - hosts:
    - ifconfig.inv.gov.ar
    port:
      number: 80
      name: http
      protocol: HTTP
