certmanager/ca/11-gateway2.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: global2
  namespace: ifconfig
spec:
  selector:
    istio: ingress
    app: istio-ingress
  servers:
  - hosts:
    - ifconfig.inv.gov.ar
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: iftest-cert
  - hosts:
    - ifconfig.inv.gov.ar
    port:
      number: 80
      name: http
      protocol: HTTP
